# rat

./: .dockerignore  .gitignore  .gitleaks.toml  .mcp.json  CLAUDE.md  LICENSE  Makefile  README.md  THIRD-PARTY-NOTICES.md
.claude/: README.md  settings.json
.claude/agents/: ci-doctor.md  code-reviewer.md  plugin-builder.md
.claude/hooks/: bash-guard.sh  format-edited-file.sh  session-start.sh
.claude/rules/: ci.md  go.md  infra.md  plugins.md  proto.md  python.md  security.md  typescript.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docs.yml  licenses.yml  publish-plugins.yml  release.yml
docs/: PLUGIN_AUTHOR_GUIDE.md  api-deprecation-strategy.md  api-spec.md  audit-2026-05.md  config.md  entity-relationships.md  fix-plan.md  kubernetes-service-discovery.md  plugin-architecture-v3.md  portal.md  postgres-schema.sql  sdk.md  v2-strategy.md  zero-downtime-deployment.md
docs/adr/: 001-s3-storage.md  002-auth-middleware.md  003-warmpool-executor.md  004-scheduler.md  005-runner-service.md  006-query-service.md  007-plugin-system.md  008-auth-keycloak.md  009-container-executor.md  010-acl-plugin.md  011-cloud-aws-plugin.md  012-license-gating.md  013-landing-zones.md  014-merge-strategies.md  015-data-retention.md  016-portal-plugin-ui.md  017-python-pipeline-trust-model.md  018-cloud-credential-vending.md  019-internal-listener-split.md  020-platform-token.md  021-sdk-go-extraction.md  022-intx-helper.md  023-leader-heartbeat-dedicated-pool.md  024-warehouse-plugin-architecture.md
docs/archive/: README.md
docs/data/: launch_vehicles.csv  space_launches.csv
docs/migrations/: 2026-04-internal-listener-split.md  2026-04-listen-addr.md  2026-05-enforcement-filtered-reads.md  2026-05-examples-to-plugins.md  2026-05-plugin-restart-tokens.md  README.md
docs/reviews/: api-proto-review.md  architecture-review.md  go-platform-review.md  infrastructure-review.md  python-services-review.md  security-audit.md  typescript-portal-review.md
examples/: README.md
examples/rat-plugin-agents/: Dockerfile  Makefile  api.go  bundle.js  go.mod  handler.go  main.go  store.go
examples/rat-plugin-ai/: Dockerfile  Makefile  README.md  analyze.go  bundle.js  chat.go  go.mod  handler.go  handler_test.go  main.go  openai.go  tools.go
examples/rat-plugin-ai-provider/: Dockerfile  Makefile  api.go  config.go  go.mod  handler.go  handler_test.go  main.go  openai.go  stream.go
examples/rat-plugin-charts/: Dockerfile  Makefile  README.md  api.go  api_test.go  bundle.js  go.mod  handler.go  handler_test.go  main.go  query.go  store.go  store_test.go
examples/rat-plugin-chat/: Dockerfile  Makefile  agents.go  api.go  bundle.js  config.go  go.mod  handler.go  main.go  (+1 more)
infra/: .env.example  docker-compose.plugins.yml  docker-compose.test.yml  docker-compose.yml
install/: .env  docker-compose.yml  install.sh
platform/: .dockerignore  .golangci.yml  Dockerfile  THIRD-PARTY-NOTICES.md  go.mod  go.sum
plugins/: README.md
plugins/rat-plugin-dbt-compat/: README.md  pyproject.toml
plugins/rat-plugin-dbt-compat/src/rat_plugin_dbt_compat/: __init__.py  helpers.py
plugins/rat-plugin-dbt-compat/tests/: test_helpers.py
plugins/rat-plugin-http-source/: README.md  pyproject.toml
plugins/rat-plugin-http-source/src/rat_plugin_http_source/: __init__.py  source.py
plugins/rat-plugin-http-source/tests/: test_source.py
plugins/rat-plugin-prql/: README.md  pyproject.toml
plugins/rat-plugin-prql/src/rat_plugin_prql/: __init__.py  pipeline_type.py
plugins/rat-plugin-prql/tests/: test_pipeline_type.py
plugins/rat-plugin-row-stats/: README.md  pyproject.toml
plugins/rat-plugin-row-stats/src/rat_plugin_row_stats/: hook.py
plugins/rat-plugin-soft-delete/: README.md  pyproject.toml
plugins/rat-plugin-soft-delete/src/rat_plugin_soft_delete/: __init__.py  strategy.py
plugins/rat-plugin-soft-delete/tests/: test_strategy.py
plugins/rat-warehouse-iceberg-nessie/: Dockerfile  pyproject.toml
plugins/rat-warehouse-iceberg-nessie/src/rat_warehouse_iceberg/: __init__.py  __main__.py  config.py  iceberg.py  nessie.py  server.py  warehouse.py
plugins/rat-warehouse-iceberg-nessie/tests/: conftest.py
plugins/rat-warehouse-iceberg-nessie/tests/unit/: test_servicer.py
portal/: .dockerignore  Dockerfile  README.md  THIRD-PARTY-NOTICES.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
proto/: buf.gen.yaml  buf.yaml
query/: .dockerignore  Dockerfile  Dockerfile.test  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml
runner/: .dockerignore  Dockerfile  Dockerfile.test  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml
runner/src/rat_runner/: CLAUDE.md  __init__.py  __main__.py  callback.py  config.py  dag.py  engine.py  executor.py  failed_merge_audit.py  iceberg.py  json_log.py  log.py  maintenance.py  models.py  nessie.py  plugin_protocols.py  plugin_registry.py  preview.py  python_exec.py  quality.py  server.py  single_shot.py  state_dir.py  strategies.py  templating.py  warehouse_client.py
runner/tests/: conftest.py
runner/tests/integration/: conftest.py  test_duckdb_engine.py  test_iceberg_operations.py
runner/tests/unit/: test_callback.py  test_cleanup.py  test_config.py  test_engine.py  test_executor.py  test_iceberg.py  test_log.py  test_maintenance.py  test_models.py  test_nessie.py  test_plugin_system.py  test_preview.py  test_python_exec.py  test_quality.py  test_server.py  test_single_shot.py  test_state_dir.py  test_templating.py  test_warehouse_client.py  test_warehouse_protocol.py
scripts/: generate-licenses.sh  refresh-base-image-digests.sh
sdk-go/: README.md  auth.go  auth_test.go  config.go  config_test.go  describe.go  describe_test.go  go.mod  phone_home.go  phone_home_test.go  server.go  server_test.go
sdk-typescript/: .npmrc  README.md  THIRD-PARTY-NOTICES.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
website/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  theme.config.tsx  tsconfig.json
(+846 files in other folders)
