[project]
name = "rat-runner"
version = "0.2.0b1"
description = "Pipeline execution engine for RAT data platform"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1",
    "pyarrow>=17.0",
    "pyiceberg>=0.7",
    "grpcio>=1.65",
    "protobuf>=5.27",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff==0.15.17",
    "pyright>=1.1",
    "grpcio-tools>=1.65",
]

[project.entry-points."rat.strategies"]
full_refresh = "rat_runner.strategies:FullRefreshStrategy"
incremental = "rat_runner.strategies:IncrementalStrategy"
append_only = "rat_runner.strategies:AppendOnlyStrategy"
delete_insert = "rat_runner.strategies:DeleteInsertStrategy"
scd2 = "rat_runner.strategies:SCD2Strategy"
snapshot = "rat_runner.strategies:SnapshotStrategy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rat_runner"]

[tool.ruff]
line-length = 100
target-version = "py312"
# extend-exclude (not exclude) so ruff's built-in excludes (.venv, .git,
# __pycache__, .ruff_cache, …) still apply on top of ours. Plain `exclude`
# REPLACES the defaults, which made `ruff check .` scan a local .venv and
# report thousands of phantom errors that never exist in CI.
extend-exclude = ["src/rat_runner/gen"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
# N802: test HTTP handlers must be named do_POST etc. (http.server API).
"tests/**" = ["SIM117", "TCH001", "TCH002", "TCH003", "B011", "N806", "N802", "E501"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rat_runner --cov-report=term-missing"
