[project]
name = "rat-plugin-prql"
version = "0.1.0"
description = "PRQL pipeline type for RAT — write transforms in PRQL, compiled to SQL"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=17.0",
    "prqlc>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "rat-runner",
]

[project.entry-points."rat.pipeline_types"]
prql = "rat_plugin_prql.pipeline_type:PrqlPipelineType"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rat_plugin_prql"]
