[project]
name = "rat-plugin-row-stats"
version = "0.1.0"
description = "Post-write hook that logs row counts and schema summary"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "rat-runner",
]

[project.entry-points."rat.hooks"]
row_stats = "rat_plugin_row_stats.hook:RowStatsHook"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rat_plugin_row_stats"]
