[project]
name = "rat-plugin-soft-delete"
version = "0.1.0"
description = "Soft-delete merge strategy for RAT — marks rows as deleted instead of removing them"
requires-python = ">=3.12"
dependencies = [
    "pyarrow>=17.0",
    "duckdb>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "rat-runner",
]

[project.entry-points."rat.strategies"]
soft_delete = "rat_plugin_soft_delete.strategy:SoftDeleteStrategy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rat_plugin_soft_delete"]
